fix password
